fixed stroke on safari

--- a/css/creative.css
+++ b/css/creative.css
@@ -8,6 +8,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -481,11 +482,14 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #222;
 }
-
-.name-title {
-    color: white;
+/*
+-webkit-text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
+             #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
     text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
              #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px;
 
-    -webkit-font-smoothing: antialiased
+*/
+.name-title {
+    color: white;
+-webkit-text-stroke: rgba(0,0,0,1) 0.05em;
 }
